[package]
name = "rust_server"
version = "0.1.0"
authors = ["Arun Kumar Reddy <arunkumar.kr@flipkart.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
bufstream = "0.1.4"
chrono = "0.4"